fourth feature, allow to tune on-chain(closing transaction) fee
