# server.go
@@ -971,6 +971,7 @@ type openChanReq struct {
 
 	numConfs   uint32
 	feePerByte uint32
+	commitFee  uint32
 
 	updates chan *lnrpc.OpenStatusUpdate
 	err     chan error
@@ -1219,7 +1220,7 @@ func (s *server) ConnectToPeer(addr *lnwire.NetAddress,
 // peer identified by ID with the passed channel funding paramters.
 func (s *server) OpenChannel(peerID int32, nodeKey *btcec.PublicKey,
 	localAmt, pushAmt btcutil.Amount,
-	numConfs, feePerByte uint32) (chan *lnrpc.OpenStatusUpdate, chan error) {
+	numConfs, feePerByte, commitFee uint32) (chan *lnrpc.OpenStatusUpdate, chan error) {
 
 	errChan := make(chan error, 1)
 	updateChan := make(chan *lnrpc.OpenStatusUpdate, 1)
@@ -1231,6 +1232,7 @@ func (s *server) OpenChannel(peerID int32, nodeKey *btcec.PublicKey,
 		pushAmt:         pushAmt,
 		numConfs:        numConfs,
 		feePerByte:      feePerByte,
+		commitFee:       commitFee,
 		updates:         updateChan,
 		err:             errChan,
 	}
